fixed mistake in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p><img src="me.png" width="200" height="300"></p>
 
 <p>I was born in San Rafael, California on June 24, 2002.
-    <br> In my free time, I like to play basketball and walk do crossword puzzles.
+    <br> In my free time, I like to play basketball and do crossword puzzles.
     <br> My major is Information Management and Technology.</p>
  
 </body>
